kubernetes/apollo/apps/security/authentik/app/networkpolicy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authentik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: authentik
      app.kubernetes.io/name: authentik
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network
          podSelector:
            matchLabels:
              gateway.envoyproxy.io/owning-gateway-namespace: network
            matchExpressions:
              - key: gateway.envoyproxy.io/owning-gateway-name
                operator: In
                values:
                  - envoy-internal
                  - envoy-external
      ports:
        - protocol: TCP
          port: 9000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/instance: kube-prometheus-stack
      ports:
        - protocol: TCP
          port: 9300
